# BIGDATA_TestTask

./: .env.dist  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/config/: celery.py  routers.py  settings.py  urls.py
backend/fixtures/: db.json
backend/tasks/: tasks.py  validators.py
backend/tasks/admin/: __init__.py  task_admin.py  task_file_inline.py
backend/tasks/migrations/: 0001_initial.py  0002_alter_taskfile_task.py
backend/tasks/models/: __init__.py  task.py  task_file.py
backend/tasks/permissions/: __init__.py  task_permission.py
backend/tasks/serializers/: __init__.py  task_create_serializer.py  task_file_serializer.py  task_list_serializer.py  task_retrieve_serializer.py  task_update_serializer.py
backend/tasks/viewset/: task_viewset.py
backend/tests/tests_tasks/: test_tesk_viewset.py
backend/tests/tests_tasks/factories/: __init__.py  task_factory.py  task_file_factory.py
backend/tests/tests_users/: test_get_jwt_token.py  test_jwt_token.py  test_user_viewset.py  user_factory.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
backend/users/serializers/: __init__.py  user_registration_serializer.py
backend/users/viewset/: __init__.py  jwt_viewset.py  user_viewset.py
nginx/: nginx.conf
postman/: BIGDATA.postman_collection.json
